--- a/style.scss
+++ b/style.scss
@@ -249,7 +249,7 @@ body {
   justify-content: center;
 }
 
-.display-settings div {
+.display-settings button {
   padding: 1vh 1vw;
   margin: 5px;
   width: 8vw;
